# scheduler

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  DEV-GUIDE.MD  Dockerfile  Dockerfile.scheduler  Dockerfile.subscriber  Dockerfile.web  LICENSE  README.md  config.yaml  definitions.py  dev.sh  docker-compose.yml  download_programs.py  environment.yml  generateSchedulerSchema.sh  graphqlserver.py  greedy_max_algorithm.py  heroku.yml  index.html  main.py  mkdocs.yml  objects.inv  ocs_program_provider.py  odb_extractor_atoms.py  package.json  planmanager.py  plans.db  pnpm-lock.yaml  pnpm-workspace.yaml  print_ocs_program.py  provider.py  pyproject.toml  pytest.ini  requirements.txt  schedule.py  (+7 more)
backend/: .dockerignore  .flake8  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  scheduler.graphql
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_seed_sites.py  003_add_moon_position.py  004_add_proper_motion.py  005_add_night_start.py  006_add_horizons_id.py  007_add_nonsidereal_tag.py  008_add_visibility_data.py  009_add_scheduler_coordination.py
backend/docs/: getting-started.md
backend/scheduler/: app.py  config.py  config.yaml  events.py  main.py  shared_queue.py
backend/scheduler/clients/: gpp.py  plandb_client.py  scheduler_queue_client.py  sight_client.py
backend/scheduler/core/builder/: __init__.py  modes.py  operationbuilder.py  schedulerbuilder.py  simulationbuilder.py  validationbuilder.py
backend/scheduler/core/calculations/: targetinfo.py
backend/scheduler/core/output/: __init__.py
backend/scheduler/core/plans/: __init__.py  nightstats.py  plan.py  visit.py
backend/scheduler/core/sources/: __init__.py  services.py
backend/scheduler/data/: gpp_program_ids.txt  program_ids.redis.txt  program_ids.short.txt  program_ids_gn.redis.txt  update.txt
backend/scheduler/engine/: engine.py  engineRT.py  params.py
backend/scheduler/graphql_mid/: inputs.py  schema.py  types.py
backend/scheduler/night_monitor/: __init__.py  event_consumer.py  event_listener.py  event_sources.py  night_monitor.py  night_tracker.py
backend/scheduler/night_monitor/event_handlers/: event_handler.py  obscalc_visibility.py  odb_event_handler.py  resource_event_handler.py  weather_event_handler.py
backend/scheduler/orchestration/: __init__.py  scheduler_process.py
backend/scheduler/pickles/: ocsenv.pickle  simenv.pickle  simresource.pickle
backend/scheduler/scripts/: README.md  compare_visibility_with_sight.py  export_atoms.py  fetch_ephemerides.py  fill_sight.py  filter_demo.py  get_odb_json.py  gpp_collector.py  gpp_observations.py  list_stage1.py  list_stage2.py  odb_json.py  run.py  run_sim.py
backend/scheduler/services/: __init__.py
backend/scheduler/services/environment/: ocs_env_service.py  sim_env_service.py
backend/scheduler/services/ephemeris/: __init__.py  ephemeris_calculator.py  ephemeris_lookup.py
backend/scheduler/services/horizons/: coordinates.py  horizons_client.py
backend/scheduler/services/redis_client/: redis_client.py
backend/scheduler/services/resource/: __init__.py  event_generators.py  filters.py  ocs_resource_service.py  resource_manager.py  sim_resource_service.py
backend/scheduler/services/sight/: config.py  helpers.py
backend/scheduler/services/visibility/: calculator.py
backend/scheduler/services/visibility_aggregator/: README.md  __init__.py  (+3 more)
backend/tests/data/: GN-2022A-Q-999.json  telescope_schedule.xlsx
backend/tests/unit/: conftest.py
(+2876 files in other folders)
