[project]
name = "scheduler"
version = "0.1.7"
description = "Gemini Observatory automated scheduler"
readme = 'README.md'
authors = [{ name = "NOIRLab" }]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.1.0",
    "coverage>=7.10.3",
    "dask>=2025.10.0",
    "fastapi>=0.116.1",
    "gelidum>=0.5.9",
    "gpp-client>=25.9.0",
    "hypothesis>=6.137.1",
    "joblib>=1.5.2",
    "lucupy>=0.2.8",
    "matplotlib>=3.10.5",
    "more-itertools>=10.7.0",
    "numpy>=2.3.2",
    "omegaconf>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "psutil>=7.1.2",
    "pyarrow>=22.0.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "redis>=6.4.0",
    "requests>=2.32.4",
    "scipy>=1.16.1",
    "sortedcontainers>=2.4.0",
    "strawberry-graphql[fastapi]>=0.278.1",
    "tabulate>=0.9.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.137.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.8.0",
]
docs = [
    "mkdocs-material>=9.6.16",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mkdocstrings-python>=1.16.12",
]
